# adr-mcp

./: .gitignore  README.md  nx.json  package.json  pnpm-lock.yaml  pyproject.toml
docs/adr/: 0001-improve-adr-tool-documentation.md  0002-replace-filename-with-number-prefix-in-adr-data.md  0003-use-importlib-resources-for-template-loading.md
