[project]
name = "nx-workspace"
version = "1.0.0"
dependencies = [
  "adr_agent.tools",
  "pydantic>=2.11.7"
]

[tool.uv.workspace]
members = [ "packages/tools" ]

[tool.uv.sources."adr_agent.tools"]
workspace = true

[dependency-groups]
dev = [
  "ruff>=0.8.2",
  "autopep8>=2.3.1",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1"
]
